Fix team spacing.

--- a/assets/stylesheets/_scaffolding.scss
+++ b/assets/stylesheets/_scaffolding.scss
@@ -104,7 +104,7 @@ hr {
   padding-bottom: 27px;
 
   @media (min-width: $screen-sm-min) {
-    padding-bottom: 11px;
+    padding-bottom: 27px;
   }
 
   h3 {
